bat.bool1.posneg.PosNeg.scala.error
Erreur de compilation :
PosNeg:4: error: not found: value negatif
    }else if ((b < 0 && a > 0) || (b > 0 && a <0) && negatif == false) {
                                                     ^